# universal-logger

./: .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  README.md  TESTING.md  config_preprod.yaml  go.mod  go.sum
.github/workflows/: ci-cd.yml
cmd/examples/: main.go
cmd/universal-logger/: main.go
cpp/: ARCHITECTURE.md  Makefile  README.md  TESTING.md  UniversalLogger.hpp  main.cpp  unilog_cpp
libunilog/: libunilog.h
python/: ARCHITECTURE.md  README.md  TESTING.md  __init__.py  debug_callback.py  facade.py  lib_loader.py  libdistconf_flexlog.h  listeners.py  models.py  setup.py  test_async_logging.py  test_facade.py  test_unified_callback.py  test_unilog.py  unilog.py
python/unilog/: __init__.py  facade.py  lib_loader.py  listeners.py  models.py
rust/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md  standalone.yaml
rust/src/: lib.rs  main.rs
scripts/: Dockerfile.cross  build_all.sh
src/: ARCHITECTURE.md  README.md  TESTING.md
src/bootstrap/: bootstrap.go  unilog.go  unilog_test.go
src/c_bridge/: main.go
src/cgo_bridge/: binding.go  bootstrap.go  config.go  initialize.go  logger.go  notif_callback.go  vba_message_pump.go  vba_message_pump_stub.go
src/config/: config_handler.go
src/facade/: facade.go  facade_test.go
src/factory/: facade_factory.go
src/interfaces/: ifacade.go  logger.go  models.go
src/logger/: logger_handler.go
src/models/: params.go
src/utils/: levels.go  logger_utils.go  notif_message.go
vba/: ARCHITECTURE.md  README.md  TESTING.md  UniversalLogger.bas
